prototypes/v1/tests/elab/ok/fun_app/synth_fun_app.pion
def app0 =
    let f = fun() => false;
    f();

def app1 =
    let f = fun(x: Int) => x;
    f(1);

def curried = Array(Int);
