prototypes/v1/tests/elab/errors/fun_app/arg_mismatch0.pion
def error =
    let f = fun(x: Int) => x;
    f();
